# non-timeline-xt

./: CMakeLists.txt  README.md
FL/: About_Dialog.C  About_Dialog.fl  Fl_Menu_Settings.C  Fl_Text_Edit_Window.C  Fl_Text_Edit_Window.H  New_Project_Dialog.C  New_Project_Dialog.H
arch/: PKGBUILD
nonlib/JACK/: Client.C  Client.H  Port.C
nonlib/OSC/: Endpoint.C  Endpoint.H
timeline/: CMakeLists.txt  non-timeline.desktop.in
timeline/doc/: CMakeLists.txt  MANUAL.html
timeline/icons/: CMakeLists.txt
timeline/src/: Annotation_Point.H  Annotation_Region.C  Annotation_Region.H  Annotation_Sequence.H  Audio_Region.C  Audio_Region.H  Audio_Sequence.C  Audio_Sequence.H  Clock.H  Control_Point.C  Control_Point.H  Control_Sequence.C  Control_Sequence.H  Cursor_Point.C  Cursor_Point.H  Cursor_Region.C  Cursor_Region.H  Cursor_Sequence.C  Cursor_Sequence.H  NSM.C  OSC_Receive_Thread.C  OSC_Receive_Thread.H  OSC_Transmit_Thread.C  OSC_Transmit_Thread.H  Project.C  Project.H  RWLock.H  Region_Volume_Editor.C  Region_Volume_Editor.H  Sequence.C  Sequence.H  Sequence_Point.C  Sequence_Point.H  Sequence_Region.C  Sequence_Region.H  Sequence_Widget.C  Sequence_Widget.H  TLE.C  TLE.H  TLE.fl  (+22 more)
timeline/src/Engine/: Audio_File.C  Audio_File.H  Audio_File_Dummy.C  Audio_File_Dummy.H  Audio_File_SF.C  Audio_File_SF.H  Audio_Region.C  Audio_Sequence.C  Control_Sequence.C  Disk_Stream.C  Disk_Stream.H  Engine.C  Engine.H  Peak.H  Peaks.C  Peaks.H  Playback_DS.C  Playback_DS.H  Record_DS.C  Record_DS.H  Timeline.C  Track.C  const.h
