
install (FILES
    annotations.png
    automation.png
    clocks.png
    control-points.png
    control-signals.png
    cursors.png
    fade-in-out.png
    icon.png
    looping.png
    MANUAL.html
    new-project.png
    project-info.png
    range.png
    recording.png
    tempomap.png
    tle.png
    track-header.png
    transport.png
    DESTINATION share/doc/non-timeline-xt)

